<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MessageActivity">

    <TextView
        android:id="@+id/tv_co"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/c_me"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/feedback"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        android:textSize="21sp"
        android:textStyle="italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/myEmailAddress_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:hint="@string/myEdittext_mail_hint"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:text="@string/edittext_mail" />

            <Button
                android:id="@+id/open_website_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/button_mail" />

            <TextView
                android:id="@+id/myEmail_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:text="@string/tv_myEmail"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textSize="17sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/share_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:inputType="textMultiLine"
                android:text="@string/edittext_share" />

            <Button
                android:id="@+id/share_text_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/button_share" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>