<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".MiniweamFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="22dp"
                android:text="@string/about_brand_tv"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/intro_tet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autoLink="web"
                android:padding="8dp"
                android:text="@string/about_app"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textColorLink="@color/sienna"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/brand_mission"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/business_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/about_me_tv"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/about_me"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold|italic" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="16dp"
        android:backgroundTint="@color/sienna"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/icon_message"
        android:src="@drawable/ic_message" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>