<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".DesignsFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tools_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_gravity="center"
            android:text="@string/tools_tv"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="22sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp">

            <ImageView
                android:id="@+id/canva_iv"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="22dp"
                android:contentDescription="@string/canva_iv_tv"
                android:src="@drawable/canva" />

            <TextView
                android:id="@+id/canva_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="22dp"
                android:layout_toEndOf="@id/canva_iv"
                android:text="@string/canva_iv_tv"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </RelativeLayout>

        <TextView
            android:id="@+id/autocad_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/autocad_iv_tv"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/revit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/revit_iv_tv"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="22sp" />

        <Button
            android:id="@+id/discover_projects_acb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/title_discover_designs"
            android:textAllCaps="false"/>

    </LinearLayout>

</ScrollView>