<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".ProjectsActivity">

    <Button
        android:id="@+id/see_other_apps_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/see_other_apps_btn"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/rate_app_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_app_btn"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_intent_tv"
        android:gravity="center"
        android:layout_marginTop="22dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_tiet"
            android:layout_width="match_parent"
            android:autofillHints="phone"
            android:layout_height="wrap_content"
            android:inputType="phone">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="App Projects done"
        style="@style/TextAppearance.AppCompat.Large"
        android:textStyle="italic"
        android:layout_marginTop="22dp"
        android:gravity="center" />

    <ListView
        android:id="@+id/projects_lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />

</LinearLayout>